[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntu-forum-agent"
version = "1.0.0"
description = "自動回覆 Agent - 台灣 NTU 大學申請論壇自動回覆機器人"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}
]

dependencies = [
    "google-api-python-client==2.190.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.3.0",
    "google-generativeai==0.8.6",
    "playwright==1.58.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "certifi==2025.1.31",
    "cachetools==5.5.2",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.1",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.69.0",
    "grpcio==1.76.0",
    "idna==3.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "protobuf==5.29.4",
    "rsa==4.9",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["config", "core", "utils"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
